--- a/home.hbs
+++ b/home.hbs
@@ -29,8 +29,8 @@ into the {body} of the default.hbs template --}}
             </div>
         </div>
 
-        {{!-- Load More - pagination --}}
-        <a href="#" class="js-load-more load-more u-pointer u-hide" aria-label="{{t "Load More"}}"><span class="gradient-text gradient-text--green">{{t "Load More"}}</span></a>
+        {{!-- pagination --}}
+        {{pagination}}
     </div>
 
     {{!-- sidebar - partials/sidebar/sidebar-home-top.hbs --}}
