--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -9,8 +9,8 @@
                 {{#foreach posts}} {{> "story/story"}} {{/foreach}}
             </div>
         </div>
-        {{!-- Load More - pagination --}}
-        <a href="#" class="js-load-more load-more u-pointer u-hide" aria-label="{{t "Load More"}}"><span class="gradient-text gradient-text--green">{{t "Load More"}}</span></a>
+        {{!-- pagination --}}
+        {{pagination}}
     </div>
 
     {{!-- sidebar - partials/sidebar/sidebar.hbs --}}
