--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,8 +48,8 @@
 @import 'components/subscribe';
 // @import 'components/koenig';
 @import 'components/story';
-// @import 'components/tag-card';
 @import 'components/code';
+@import 'components/search';
 
 // pages
 // --------------------------------------------------
