--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1905,10 +1905,16 @@ a > code[class*="language-"] {
 
 .search-close {
   background: #fff;
-  color: #000;
+  border-radius: 50%;
   position: absolute;
   right: 20px;
   top: 8px;
+  padding: 5px;
+}
+
+.search-close .icon--close {
+  height: 25px;
+  width: 25px;
 }
 
 .search-form {
@@ -1916,14 +1922,15 @@ a > code[class*="language-"] {
   overflow: hidden;
 }
 
-.search-form > i {
+.search-form > .icon--search {
   margin-right: 5px;
-  color: #9baeb8;
 }
 
 .search-form input {
   background: #fff;
   border: none;
+  width: 100%;
+  padding: 0;
 }
 
 .search-form input:focus {
