--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -16,13 +16,8 @@
 
     max-width: 700px;
     padding: 6vw 20px 20px;
-    // opacity: 0;
-    // transform: scale(.6);
-    // transition: transform .3s cubic-bezier(.06, .47, .38, .99), opacity .3s cubic-bezier(.06, .47, .38, .99);
     width: 100%;
     margin-bottom: 30px;
-    // overflow: hidden;
-    // margin-top: 6vw;
   }
 
   &-wrap {
@@ -41,21 +36,29 @@
 
   &-close {
     background: #fff;
-    color: #000;
+    border-radius: 50%;
     position: absolute;
     right: 20px;
     top: 8px;
+    padding: 5px;
+
+    .icon--close {
+      height: 25px;
+      width: 25px;
+    }
   }
 
   &-form {
     padding: 16px;
     overflow: hidden;
 
-    & > i { margin-right: 5px; color: #9baeb8 }
+    & > .icon--search { margin-right: 5px }
 
     input {
       background: #fff;
       border: none;
+      width: 100%;
+      padding: 0;
 
       &:focus { outline: 0; }
     }
