add facebook comments load

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1043,6 +1043,10 @@ p {
     margin-left: 0;
     margin-right: 0;
   }
+  .comments {
+    left: auto !important;
+    width: 470px !important;
+  }
 }
 
 @media only screen and (min-width: 800px) {
@@ -1401,6 +1405,25 @@ p {
     max-width: 1200px;
     margin-left: 250px;
   }
+}
+
+.comments {
+  z-index: 50;
+  width: 100%;
+  overflow-y: auto;
+  background: #fff;
+  border-left: 1px solid #f1f1f1;
+  transform: translateX(100%);
+  transition: .4s;
+}
+
+.comments-header {
+  padding: 1em 1.25em;
+  border-bottom: 1px solid #ddd;
+}
+
+body.has-comments .comments {
+  transform: translateX(0);
 }
 
 .gradient-text--green {
