--- a/partials/article/article-meta.hbs
+++ b/partials/article/article-meta.hbs
@@ -6,7 +6,7 @@
     </div>
     {{!-- Comments --}}
     <div class="article-meta--right u-hide-before-md">
-        <div class="js-comments-open u-pointer">
+        <div class="js-comments-toggle u-pointer">
             <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span> Comments
         </div>
     </div>
