--- a/src/scss/layout/_wrapper.scss
+++ b/src/scss/layout/_wrapper.scss
@@ -55,6 +55,11 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  .comments {
+    left: auto !important;
+    width: 470px !important;
+  }
 }
 
 @media #{$md-and-up} {
