--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,7 @@
 // @import 'layout/main';
 @import 'layout/sidebar';
 @import 'layout/footer';
+@import 'layout/comments';
 
 // components
 // --------------------------------------------------
