--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -37,4 +37,7 @@
 
     {{!-- Article topics - parials/article/topics.hbs --}}
     {{> "article/topics"}}
+
+    {{!-- Article Comments - parials/article/comments.hbs --}}
+    {{> "article/comments"}}
 </article>
