--- a/partials/article/comment-count.hbs
+++ b/partials/article/comment-count.hbs
@@ -1,5 +1,5 @@
 <div class="block--comment u-marginTop30 u-marginBottom20 u-textAlignCenter">
-    <button class="button button--green button--secondary">
+    <button class="js-comments-toggle button button--green button--secondary">
         {{t "View Comments"}} <span class="js-comments-count">(0)</span>
     </button>
 </div>
