show and hide social share

--- a/partials/article/footer.hbs
+++ b/partials/article/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="article-footer u-marginBottom30 u-clear">
-       <div class="social-share u-relative u-inlineBlock u-floatLeft">
+       <div class="js-social-share social-share u-relative u-inlineBlock u-floatLeft share--fixed share-open">
             <div class="u-flex">
                 <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                     target="_blank"
