--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,6 +51,7 @@
 @import 'components/story';
 @import 'components/code';
 @import 'components/search';
+@import 'components/social-share';
 
 // pages
 // --------------------------------------------------
