--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2034,6 +2034,103 @@ body.has-search .search-inner {
   }
 }
 
+.social-share {
+  bottom: -1px;
+}
+
+.social-share a {
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+}
+
+.social-share .icon {
+  justify-content: center;
+}
+
+.social-share .icon--facebook {
+  background-color: #3b5998;
+}
+
+.social-share .icon--twitter {
+  background-color: #55acee;
+}
+
+.social-share .icon--linkedin {
+  background-color: #007bb6;
+}
+
+.social-share .icon--reddit {
+  background-color: #ff4500;
+}
+
+.social-share .icon--whatsapp {
+  background-color: #64d448;
+}
+
+.share--fixed {
+  margin-left: -58px;
+  position: fixed;
+  bottom: 0;
+}
+
+.share--fixed.share-open div > * {
+  left: auto;
+  position: relative;
+}
+
+.share--fixed > div > * {
+  position: absolute;
+  left: 0;
+  transition: left .15s ease-in-out;
+}
+
+.share--fixed > div:hover * {
+  position: relative;
+  left: auto;
+}
+
+.share--fixed a.icon--linkedin {
+  position: relative;
+}
+
+.shortlink-input {
+  border: 0;
+  color: #777;
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 2.8em;
+  max-width: 260px;
+  min-width: 210px;
+  padding: 5px 50px 5px 20px;
+  text-align: center;
+  transition: color .15s linear;
+  width: auto;
+}
+
+.shortlink-input:focus, .shortlink-input:hover {
+  color: #00a562;
+  background-color: transparent;
+}
+
+.shortlink-indicator {
+  font-size: 15px;
+  border-radius: 3px;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #ddd;
+  transition: background-color .15s linear;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  display: block;
+  text-align: center;
+  height: 22px;
+  white-space: nowrap;
+}
+
 .article {
   margin: 0;
   padding: 0 0 30px;
@@ -2178,81 +2275,6 @@ body.has-search .search-inner {
 .kg-width-full {
   width: 125%;
   max-width: 125%;
-}
-
-.social-share {
-  bottom: -1px;
-}
-
-.social-share a {
-  width: 60px;
-  height: 60px;
-  justify-content: center;
-}
-
-.social-share a:hover {
-  opacity: .8;
-}
-
-.social-share .icon {
-  justify-content: center;
-}
-
-.social-share .icon--facebook {
-  background-color: #3b5998;
-}
-
-.social-share .icon--twitter {
-  background-color: #55acee;
-}
-
-.social-share .icon--linkedin {
-  background-color: #007bb6;
-}
-
-.social-share .icon--reddit {
-  background-color: #ff4500;
-}
-
-.social-share .icon--whatsapp {
-  background-color: #64d448;
-}
-
-.shortlink-input {
-  border: 0;
-  color: #777;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 2.8em;
-  max-width: 260px;
-  min-width: 210px;
-  padding: 5px 50px 5px 20px;
-  text-align: center;
-  transition: color .15s linear;
-  width: auto;
-}
-
-.shortlink-input:focus, .shortlink-input:hover {
-  color: #00a562;
-  background-color: transparent;
-}
-
-.shortlink-indicator {
-  font-size: 15px;
-  border-radius: 3px;
-  padding: 0 10px;
-  color: #fff;
-  background-color: #ddd;
-  transition: background-color .15s linear;
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  pointer-events: none;
-  display: block;
-  text-align: center;
-  height: 22px;
-  white-space: nowrap;
 }
 
 .article-tags-wrap {
