--- a/partials/article/footer.hbs
+++ b/partials/article/footer.hbs
@@ -1,10 +1,10 @@
 <footer class="article-footer u-marginBottom30 u-clear">
-       <div class="js-social-share social-share u-relative u-inlineBlock u-floatLeft share--fixed share-open">
-            <div class="u-flex">
+       <div class="social-share u-relative u-inlineBlock u-floatLeft">
+            <div class="u-flex js-social-share share--fixed share-open">
                 <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="u-flexCenter icon--facebook"
+                    class="u-flexCenter icon--facebook zindex1"
                     title="{{t "Share on Facebook"}}"
                     onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
                     <span class="icon icon--white">{{> "icons/facebook"}}</span>
