--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,7 +3,9 @@
 // -----------------------------------------------------------------------------
 
 // color
-$primary-color: #00a562;
+// $primary-color: #00a562;
+$primary-color: #00854F;
+$primary-color-gray: #757575;
 
 $color-share: #04a763 #20b66d #34c174 #1ec942 #08d013;
 
@@ -58,6 +60,9 @@ $headings-line-height:     1.1;
 // Header
 // ==========================================================================
 $header-mobile-height: 50px;
+
+// Footer
+$footer-color: #6E6E6E;
 
 // Wrap
 // ==========================================================================
