--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -79,7 +79,7 @@ figcaption {
   font-size: .8em;
   font-style: italic;
   line-height: 1.2;
-  color: #777;
+  color: $primary-color-gray;
 }
 
 button, input { overflow: visible }
