--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -14,7 +14,7 @@
     margin-top: 15px;
     margin-bottom: 20px;
     display: block;
-    color: #777;
+    color: $primary-color-gray;
   }
 
   &-form {
