--- a/default.hbs
+++ b/default.hbs
@@ -13,6 +13,8 @@
     {{!-- Styles --}}
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700,900&display=swap" rel="stylesheet">
     {{!-- <link href="https://fonts.googleapis.com/css?family=Paytone+One|Rokkitt:400,500&display=swap" rel="stylesheet"> --}}
+    {{!-- <link href="https://fonts.googleapis.com/css?family=Alegreya:400,500,700,800&display=swap" rel="stylesheet"> --}}
+
 
     <link rel="stylesheet" type="text/css" href="{{asset "styles/main.css"}}"/>
 
@@ -41,9 +43,6 @@
 
     {{!-- The main JavaScript --}}
     <script src="{{asset "scripts/main.js"}}" defer></script>
-    {{!-- Search --}}
-    {{!-- <script src="https://unpkg.com/@tryghost/content-api@1.2.5/umd/content-api.min.js" defer></script>
-    <script src="{{asset "scripts/search.js"}}" defer></script> --}}
 
     {{!-- Pagination --}}
     {{#if pagination.pages}}<script src="{{asset "scripts/pagination.js"}}" defer></script>{{/if}}
