add showt link copy

--- a/partials/article/footer.hbs
+++ b/partials/article/footer.hbs
@@ -44,7 +44,7 @@
        </div>
 
        <div class="shortlink u-inlineBlock u-relative u-hide-before-md">
-           <input class="shortlink-input" readonly="" title="{{t "Article Shortlink"}}" type="text" value="{{url absolute="true"}}">
+           <input id="shortlink" class="shortlink-input" readonly="" title="{{t "Article Shortlink"}}" type="text" value="{{url absolute="true"}}">
            <span class="shortlink-indicator">{{t "copy"}}</span>
        </div>
 </footer>
