--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2072,6 +2072,27 @@ body.has-search .search-inner {
   background-color: #64d448;
 }
 
+@keyframes bounce-in-out {
+  0% {
+    right: 10px;
+  }
+  40% {
+    right: 0px;
+  }
+  80% {
+    right: 2px;
+  }
+  100% {
+    right: 10px;
+  }
+}
+
+.shortlink.active .shortlink-indicator {
+  background-color: #00854F;
+  animation: bounce-in-out .2s 1;
+  animation-timing-function: ease;
+}
+
 .shortlink-input {
   border: 0;
   color: #757575;
@@ -2086,7 +2107,7 @@ body.has-search .search-inner {
   width: auto;
 }
 
-.shortlink-input:focus, .shortlink-input:hover {
+.shortlink-input::selection, .shortlink-input:focus, .shortlink-input:hover {
   color: #00854F;
   background-color: transparent;
 }
