--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -62,6 +62,7 @@
 // @import 'pages/author';
 // @import 'pages/page';
 @import 'pages/post';
+@import 'pages/topic';
 // @import 'pages/amp';
 // @import 'pages/subscribe';
 // @import 'pages/private';
