--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,7 +59,7 @@
 @import 'pages/home';
 // @import 'pages/index';
 // @import 'pages/tag';
-// @import 'pages/author';
+@import 'pages/author';
 // @import 'pages/page';
 @import 'pages/post';
 @import 'pages/topic';
