--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -9,6 +9,10 @@
 .zindex3 { z-index: 3 }
 .zindex4 { z-index: 4 }
 
+// border-radius
+.u-round { border-radius: 50% }
+
+
 // font size
 .u-fontSizeMicro { font-size: 0.6875rem } //11
 .u-fontSizeSmallest { font-size: 0.75rem } //12
