add comments in image and video post format

--- a/custom-post-image.hbs
+++ b/custom-post-image.hbs
@@ -58,6 +58,9 @@
 
         {{!-- Article topics - parials/article/topics.hbs --}}
         {{> "article/topics"}}
+
+        {{!-- Article Comments - parials/article/comments.hbs --}}
+        {{> "article/comments"}}
     </article>
     </div>
 
