--- a/custom-post-video.hbs
+++ b/custom-post-video.hbs
@@ -32,6 +32,9 @@
 
             {{!-- Article topics - parials/article/topics.hbs --}}
             {{> "article/topics"}}
+
+            {{!-- Article Comments - parials/article/comments.hbs --}}
+            {{> "article/comments"}}
         </article>
     </div>
 
