--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -56,6 +56,10 @@
     margin-left: 0;
     margin-right: auto;
     padding: 25px 0 18px;
+
+    &-wrap {
+      margin-left: 210px;
+    }
   }
 }
 
