--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1233,9 +1233,6 @@ p {
   .mainMenu a:hover {
     color: #00854F;
   }
-  .mainMenu .menu-item {
-    padding: .2em 0;
-  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -1290,7 +1287,8 @@ p {
     background-color: transparent;
   }
   .nav-body {
-    margin: 30px 0;
+    margin: 30px 0 0 0;
+    overflow-y: auto;
   }
 }
 
@@ -1401,6 +1399,9 @@ p {
     margin-left: 0;
     margin-right: auto;
     padding: 25px 0 18px;
+  }
+  .footer-wrap {
+    margin-left: 210px;
   }
 }
 
@@ -2262,11 +2263,12 @@ body.has-search .search-inner {
   margin: 25px 0;
 }
 
-.article-byline a {
-  font-size: 1.125rem;
-  font-weight: 600;
+.article-byline-author {
   color: #333;
-  line-height: 20px;
+}
+
+.article-byline a:hover {
+  color: #00854F;
 }
 
 .article-divider {
