--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -132,7 +132,7 @@
       &:hover { color: $primary-color }
     }
 
-    .menu-item { padding: .2em 0 }
+    // .menu-item { padding: .2em 0 }
   }
 }
 
@@ -190,7 +190,7 @@
     z-index: 30;
 
     &-header { background-color: transparent }
-    &-body { margin: 30px 0 }
+    &-body { margin: 30px 0 0 0; overflow-y: auto }
   }
 }
 
