--- a/partials/article/article-meta.hbs
+++ b/partials/article/article-meta.hbs
@@ -12,7 +12,7 @@
     {{!-- Comments --}}
     <div class="article-meta--right u-hide-before-md">
         <div class="js-comments-toggle u-pointer">
-            <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span> Comments
+            <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span> {{t "Comments"}}
         </div>
     </div>
 </div>
