--- a/partials/article/footer.hbs
+++ b/partials/article/footer.hbs
@@ -5,7 +5,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="u-flexCenter icon--facebook zindex1"
-                    title="{{t "Share on Facebook"}}"
+                    title="{{t "Share on"}} Facebook"
                     onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
                     <span class="icon icon--white">{{> "icons/facebook"}}</span>
                 </a>
@@ -13,7 +13,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="u-flexCenter icon--twitter"
-                    title="{{t "Share on Twitter"}}"
+                    title="{{t "Share on"}} Twitter"
                     onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
                     <span class="icon icon--white">{{> "icons/twitter"}}</span>
                 </a>
@@ -21,7 +21,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="u-flexCenter icon--reddit"
-                    title="{{t "Share on Reddit"}}"
+                    title="{{t "Share on"}} Reddit"
                     onclick="window.open(this.href, 'share-reddit', 'width=600,height=480');return false;">
                     <span class="icon icon--white">{{> "icons/reddit"}}</span>
                 </a>
@@ -29,7 +29,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="u-flexCenter icon--linkedin"
-                    title="{{t "Share on Linkedin"}}"
+                    title="{{t "Share on"}} Linkedin"
                     onclick="window.open(this.href, 'share-linkedin', 'width=600,height=480');return false;">
                     <span class="icon icon--white">{{> "icons/linkedin"}}</span>
                 </a>
@@ -37,7 +37,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="u-flexCenter icon--whatsapp u-hide-after-md"
-                    title="{{t "Share on WhatsApp"}}">
+                    title="{{t "Share on"}} WhatsApp">
                     <span class="icon icon--whatsapp icon--white">{{> "icons/whatsapp"}}</span>
                 </a>
             </div>
