--- a/partials/article/related.hbs
+++ b/partials/article/related.hbs
@@ -3,7 +3,7 @@
 
 <div class="rimay-wrap u-marginTop30">
     <div class="rimay-content">
-        <h2 class="rimay-home--title u-fontSize22">{{t "Related Post"}}</h2>
+        <h2 class="rimay-home--title u-fontSize22 u-fontWeightMedium">{{t "Related Post"}}</h2>
 
         <div class="story-feed">
             <div class="story-feed-content">
