--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -33,7 +33,7 @@
                 {{!-- Open Seaarch --}}
                 <div class="search-field u-marginBottom20 u-hide-before-lg">
                     <div class="js-open-search u-pointer u-fontSizeBase u-fontWeightMedium">
-                        <span>Search</span>
+                        <span>{{t "Search"}}</span>
                         <span class="icon icon--search icon--gray"> {{> "icons/search"}} </span>
                     </div>
                 </div>
