--- a/partials/widget/newsletter.hbs
+++ b/partials/widget/newsletter.hbs
@@ -1,7 +1,7 @@
 {{#if @labs.subscribers}}
 <aside class="newsletter u-marginTop30">
     <div class="newsletter-wrap">
-        <h5 class="newsletter-title">{{t "Want more stuff like this?"}}</h5>
+        <h5 class="newsletter-title u-flexCenter">{{t "Want more stuff like this?"}}</h5>
         <div class="newsletter-right">
             <label for="subscribeEmail" class="newsletter-label">{{t "Get the best viral stories straight into your inbox!"}}</label>
 
