--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -69,6 +69,7 @@
       padding-right: 20px;
       flex-basis: 250px;
       font-size: 2rem;
+      text-align: right;
     }
 
     &-right { flex-basis: 67.5% }
