--- a/home.hbs
+++ b/home.hbs
@@ -20,7 +20,7 @@ into the {body} of the default.hbs template --}}
 <div class="rimay-wrap">
     <div class="rimay-content">
         {{!-- Title For Home Page --}}
-        <h2 class="rimay-home--title u-fontSize22 u-marginTop15 u-marginBottom15">{{t "The Latest"}}</h2>
+        <h2 class="rimay-home--title u-fontSize22 u-marginTop15 u-marginBottom15 u-fontWeightMedium">{{t "The Latest"}}</h2>
 
         <div class="story-feed">
             <div class="story-feed-content">
