--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -4,11 +4,12 @@
             {{!-- logo --}}
             <div class="logo u-relative">
                 <a href="/" class="u-block">
-                    {{#if @site.logo}}
+                        <span class="u-block logo-svg">{{> "icons/logo"}}</span>
+                    {{!-- {{#if @site.logo}}
                         <img src="{{img_url @site.logo size="l"}}" alt="{{@site.title}}"/>
                     {{else}}
                         <span class="u-lineHeight1 u-fontWeightBold u-fontSizeLarger gradient-text gradient-text--green">{{@site.title}}</span>
-                    {{/if}}
+                    {{/if}} --}}
                 </a>
             </div>
 
@@ -34,7 +35,7 @@
                 <div class="search-field u-marginBottom20 u-hide-before-lg">
                     <div class="js-open-search u-pointer u-fontSizeBase u-fontWeightMedium">
                         <span>{{t "Search"}}</span>
-                        <span class="icon icon--search icon--gray"> {{> "icons/search"}} </span>
+                        <span class="icon icon--search icon--md icon--gray"> {{> "icons/search"}} </span>
                     </div>
                 </div>
 
